# VulkanDemo

./: .gitattributes  .gitignore  CMakeLists.txt
assets/GPUOcclusionTest/: Occlusion.gltf
assets/LightSponza/: Sponza.gltf
assets/ShadowTest/: ShadowTest.gltf
assets/Sponza/: Sponza.gltf
assets/Sponza2/: Sponza.gltf
assets/Sponza2/temp/: merged.gltf  merged_dedup.gltf
assets/TestPBR/: TestPBR.gltf
shaders/: CMakeLists.txt
shaders/include/: base_vsin.slang  bit_math.slang  common_math.fx.slang  common_math.slang  common_registers.slang  const_math.slang  frustum.slang  half_utils.fx.slang  half_utils.slang  primitives.slang  registers_common.fx.slang  test_incl.fx  test_registers.slang  test_vsin.slang  test_vsout.slang
shaders/include/base/: common.slang  vsin.slang  vsout.slang
shaders/include/common/: PCF_kernels.slang  brdf.slang  common.slang  common_cs.slang  common_dbg.slang  common_defines.slang  common_funcs.slang  common_geom_culling.slang  common_hzb.slang  common_structs.slang  csm_incl.slang  dbg_vis.slang  gbuffer_incl.slang  geom_culling_incl.slang  geom_stream_incl.slang  geom_structs.slang  resource_defines.slang  sm_incl.slang  tonemapping.slang
shaders/include/common/lighting/: brdf.slang
shaders/include/common/math/: bits_pack_unpack.slang  color_space.slang  color_utils.slang  common.slang  constants.slang  contribution_culling.slang  culling.slang  distribution.slang  frustum.slang  frustum_culling.slang  geom_primitives.slang  half.slang  hzb_culling.slang  math.slang  primitives.slang  utils.slang
shaders/include/common/system/: sys_constants.slang
shaders/include/gbuffer/: common.slang  vsin.slang
shaders/include/math/: colors.slang  frustum.slang  math.slang  primitives.slang
shaders/include/pass/backbuffer/: vsin.slang  vsout.slang
shaders/include/pass/csm/: vsin.slang  vsout.slang
shaders/include/pass/dbg_draw/: vsin.slang  vsout.slang
shaders/include/pass/dbg_draw_primitives/: vsin.slang
shaders/include/pass/dbg_rt_view/: vsin.slang  vsout.slang
shaders/include/pass/deferred_lighting/: vsin.slang  vsout.slang
shaders/include/pass/forward/: vsin.slang  vsout.slang
shaders/include/pass/gbuffer/: common.slang  vsin.slang  vsout.slang
shaders/include/pass/post_processing/: vsin.slang  vsout.slang
shaders/include/pass/skybox/: vsin.slang  vsout.slang
shaders/include/pass/sm/: vsin.slang  vsout.slang
shaders/include/pass/zpass/: vsin.slang  vsout.slang
shaders/include/registers/: backbuffer_registers.slang  base_culling_registers.slang  base_render_registers.slang  brdf_integration_gen_registers.slang  common_registers.slang  csm_registers.slang  dbg_draw_lines_registers.slang  dbg_draw_registers.slang  dbg_draw_triangles_registers.slang  dbg_rt_view_registers.slang  deferred_lighting_registers.slang  forward_registers.slang  gbuffer_culling_registers.slang  gbuffer_registers.slang  geom_batching_registers.slang  geom_culling_registers.slang  geom_draw_cmd_gen_registers.slang  hzb_registers.slang  irradiance_map_gen_registers.slang  mesh_culling_registers.slang  post_processing_registers.slang  prefiltered_env_map_gen_registers.slang  skybox_registers.slang  sm_registers.slang  zpass_registers.slang
shaders/include/zpass/: vsin.slang  vsout.slang
shaders/source/: test.frag  test.ps.slang  test.vert  test.vs.slang
shaders/source/IBL/: brdf_integration_gen.cs.slang  irradiance_map_gen.cs.slang  prefiltered_env_map_gen.cs.slang
shaders/source/backbufffer/: backbuffer.ps.slang  backbuffer.vs.slang
shaders/source/base/: base.ps.slang  base.vs.slang  base_culling.cs.slang  base_render.ps.slang  base_render.vs.slang
shaders/source/csm/: csm.cs.slang  csm.ps.slang  csm.vs.slang
shaders/source/culling/: mesh_culling.cs.slang
shaders/source/dbg_draw/: dbg_draw_lines.ps.slang  dbg_draw_lines.vs.slang  dbg_draw_triangles.ps.slang  dbg_draw_triangles.vs.slang
shaders/source/dbg_draw_primitives/: dbg_draw_lines.ps.slang  dbg_draw_lines.vs.slang  dbg_draw_triangles.ps.slang  dbg_draw_triangles.vs.slang
shaders/source/dbg_rt_view/: dbg_rt_view.ps.slang  dbg_rt_view.vs.slang
shaders/source/deferred_lighting/: deferred_lighting.cs.slang  deferred_lighting.ps.slang  deferred_lighting.vs.slang
shaders/source/forward/: forward.ps.slang  forward.vs.slang
shaders/source/gbuffer/: gbuffer.cs.slang  gbuffer.ps.slang  gbuffer.vs.slang
shaders/source/geom/batching/: geom_batching.cs.slang
shaders/source/geom/culling/: geom_culling_phase_1.cs.slang  geom_culling_phase_2.cs.slang
shaders/source/geom/draw_cmd_gen/: geom_draw_cmd_gen.cs.slang
shaders/source/geom_culling/: geom_culling.cs.slang  geom_culling_occluders.cs.slang  geom_culling_occlusion.cs.slang  geom_culling_phase_1.cs.slang  geom_culling_phase_2.cs.slang
shaders/source/hzb/: hzb.cs.slang
shaders/source/post_processing/: post_processing.ps.slang  post_processing.vs.slang
shaders/source/scene/: mesh_culling.cs.slang  scene.cs.slang
shaders/source/scene_processing/: scene.cs.slang
shaders/source/skybox/: skybox.ps.slang  skybox.vs.slang
shaders/source/sm/: sm.cs.slang  sm.ps.slang  sm.vs.slang
shaders/source/test/: registers_test.fx.slang  test.ps.slang  test.vs.slang  test_vsin.fx.slang  test_vsout.fx.slang
shaders/source/utils/: irradiance_map_gen.cs.slang
shaders/source/zpass/: zpass.ps.slang  zpass.vs.slang
source/: main.cpp  pch.h
source/core/: core.h
source/core/camera/: camera.cpp  camera.h
source/core/engine/camera/: camera.cpp  camera.h
source/core/engine/profiler/: core.h  (+1 more)
source/core/math/: aabb.cpp  aabb.h  frustum.cpp  frustum.h  math.h  random.cpp  random.h  transform.h
source/core/platform/: platform.h
source/core/profiler/: core.h  cpu_profiler.h
source/core/utils/: assert.h  hash.h  log.cpp  log.h  timer.cpp  timer.h
source/core/wnd_system/: wnd_system.cpp
source/platform/: platform.h  win32_headers.h  window.h  window_events.h
source/platform/window/: event_queue.h  window.h
source/render/core/: core.h
source/render/debug/: dbg_ui.cpp  dbg_ui.h  debug_ui.cpp  debug_ui.h
(+73 files in other folders)
