cmake_minimum_required (VERSION 3.8)

project (SHADERS)


option(SHADER_USE_REVERSED_Z "Use Reversed Depth Buffer in Shaders" ON)


set(SHADERS_PROJ_NAME ${PROJECT_NAME})
set(SHADERS_PROJ_NAME ${SHADERS_PROJ_NAME} PARENT_SCOPE)

set(SHADERS_PROJ_DIR ${CMAKE_CURRENT_LIST_DIR})
set(SHADERS_SRC_DIR ${SHADERS_PROJ_DIR}/source)
set(SHADERS_INCLUDE_DIR ${SHADERS_PROJ_DIR}/include)

set(SHADERS_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR})
set(SHADERS_OUTPUT_BIN_DIR ${SHADERS_OUTPUT_DIR}/bin)


if(CMAKE_BUILD_TYPE STREQUAL "MinSizeRel")
    message(FATAL_ERROR "Invalid build type: ${CMAKE_BUILD_TYPE}. Use Debug/RelWithDebInfo (Profile)/Release")
endif()

if (NOT EXISTS ${SHADERS_OUTPUT_BIN_DIR})
    message(STATUS "${SHADERS_PROJ_NAME}: Creating ${SHADERS_OUTPUT_BIN_DIR}...")
    make_directory(${SHADERS_OUTPUT_BIN_DIR})
endif()


set(SHADER_COMPILER $ENV{VULKAN_SDK}/Bin/slangc.exe)

set(SHADER_COMPILER_FLAGS
    -emit-spirv-directly
    -target spirv
    -fvk-use-entrypoint-name
    -entry main
    -I${SHADERS_INCLUDE_DIR}
)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    list(APPEND SHADER_COMPILER_FLAGS -O0 -g -DENV_DEBUG)
elseif(CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
    list(APPEND SHADER_COMPILER_FLAGS -O -DENV_PROFILE)
elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
    list(APPEND SHADER_COMPILER_FLAGS -O -DENV_RELEASE)
endif()

if (SHADER_USE_REVERSED_Z)
    list(APPEND SHADER_COMPILER_FLAGS -DENV_REVERSED_Z)
endif()

message(STATUS "${SHADERS_PROJ_NAME}: COMPILER: ${SHADER_COMPILER}")
message(STATUS "${SHADERS_PROJ_NAME}: FLAGS: ${SHADER_COMPILER_FLAGS}")
message(STATUS "${SHADERS_PROJ_NAME}: SOURCE DIR: ${SHADERS_SRC_DIR}")
message(STATUS "${SHADERS_PROJ_NAME}: INCLUDE DIR: ${SHADERS_INCLUDE_DIR}")
message(STATUS "${SHADERS_PROJ_NAME}: OUTPUT DIR: ${SHADERS_OUTPUT_BIN_DIR}")


file(GLOB_RECURSE SHADER_IMPORT_FILES_LIST ${SHADERS_INCLUDE_DIR}/*.slang)
file(GLOB_RECURSE VS_SHADER_SRC_FILES_LIST ${SHADERS_SRC_DIR}/*.vs.slang)
file(GLOB_RECURSE PS_SHADER_SRC_FILES_LIST ${SHADERS_SRC_DIR}/*.ps.slang)
file(GLOB_RECURSE CS_SHADER_SRC_FILES_LIST ${SHADERS_SRC_DIR}/*.cs.slang)

function(compile_shaders SHADER_LIST SHADER_PROFILE OUT_BINARY_LIST)
    set(SPIRV_FILES "")
    
    foreach(SHADER_FILE IN LISTS ${SHADER_LIST})
        get_filename_component(SHADER_NAME ${SHADER_FILE} NAME_WLE)
        set(SPIRV_OUTPUT ${SHADERS_OUTPUT_BIN_DIR}/${SHADER_NAME}.spv)

        add_custom_command(
            OUTPUT ${SPIRV_OUTPUT}
            COMMAND ${SHADER_COMPILER} ${SHADER_FILE} ${SHADER_COMPILER_FLAGS} -profile ${SHADER_PROFILE} -o ${SPIRV_OUTPUT}
            DEPENDS ${SHADER_FILE} ${SHADER_IMPORT_FILES_LIST}
            COMMENT "${SHADERS_PROJ_NAME}: Compiling ${SPIRV_OUTPUT}"
            VERBATIM
        )

        list(APPEND SPIRV_FILES ${SPIRV_OUTPUT})
    endforeach()

    set(${OUT_BINARY_LIST} "${SPIRV_FILES}" PARENT_SCOPE)
endfunction()


compile_shaders(VS_SHADER_SRC_FILES_LIST vs_6_6 VS_SPIRV_BINARY_FILES_LIST)
compile_shaders(PS_SHADER_SRC_FILES_LIST ps_6_6 PS_SPIRV_BINARY_FILES_LIST)
compile_shaders(CS_SHADER_SRC_FILES_LIST cs_6_6 CS_SPIRV_BINARY_FILES_LIST)


add_custom_target(${SHADERS_PROJ_NAME} DEPENDS 
    ${SHADER_IMPORT_FILES_LIST}
    ${VS_SPIRV_BINARY_FILES_LIST} 
    ${PS_SPIRV_BINARY_FILES_LIST} 
    ${CS_SPIRV_BINARY_FILES_LIST} 
)
